<?xml version="1.0" encoding="utf-8"?>
<!-- ** Strings which are used in app -->
<resources>
    <string name="app_name">Routing</string>
    <string name="distanzrechner">Bitte geben Sie Ihre Start- und Ziel-\nposition ein:</string>
    <string name="title_opt">Bitte wählen Sie Ihre Routingoption:</string>
    <string name="titleInfo">Starte Routing</string>
    <string name="schliessen">Schließen</string>
    <string name="emptyField">Felder dürfen nicht leer sein! Bitte alle Felder ausfüllen</string>
    <string name="noNetwork">Kein Internet verfügbar. Bitte prüfen Sie Ihre Internetverbindung!</string>
    <string name="manouver_0">Links abbiegen</string>
    <string name="manouver_1">Rechts abbiegen</string>
    <string name="manouver_2">Scharf links abbiegen</string>
    <string name="manouver_3">Scharf rechts abbiegen</string>
    <string name="manouver_4">Leicht links abbiegen</string>
    <string name="manouver_5">Leicht rechts abbiegen</string>
    <string name="manouver_6">Geradeaus</string>
    <string name="manouver_7">In den Kreisverkehr einfahren</string>
    <string name="manouver_8">Den Kreisverkehr verlassen auf</string>
    <string name="manouver_9">Bitte wenden</string>
    <string name="manouver_10">Ziel</string>
    <string name="manouver_11">Start</string>
    <string name="manouver_12">Links halten</string>
    <string name="manouver_13">Rechts halten</string>
    <string name="set_current_location_as_endpoint">Set current location as endpoint</string>
    <string name="set_current_location_as_start">Set current location as startpoint</string>
    <string name="x_koordinate_1">X-Koordinate 1</string>
    <string name="y_koordinate_1">Y-Koordinate 1</string>
    <string name="x_koordinate_2">X-Koordinate 2</string>
    <string name="y_koordinate_2">Y-Koordinate 2</string>
    <string name="start">Start</string>
    <string name="end">Ziel</string>
    <string name="start_nav">Start navigation</string>
    <string name="startEnd">Startpunkt darf nicht Endpunkt sein.</string>
</resources>





