<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/distanzrechner"
        android:textSize="30sp"/>


    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="49dp"
        android:layout_marginLeft="49dp"
       android:layout_marginBottom="100dp"
        android:layout_centerHorizontal="true"
        android:text="@string/start_nav" />

    <Button
        android:id="@+id/first_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/y_one"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="10dp"
        android:text="@string/set_current_location_as_endpoint" />

    <Button
        android:id="@+id/second_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/y_two"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="59dp"
        android:layout_marginLeft="59dp"
        android:layout_marginTop="10dp"
        android:text="@string/set_current_location_as_endpoint" />

    <EditText
        android:id="@+id/x_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="70dp"
        android:ems="7"
        android:hint="@string/x_koordinate_1"
        android:inputType="numberDecimal|numberSigned" />

    <EditText
        android:id="@+id/y_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="120dp"
        android:ems="7"
        android:hint="@string/y_koordinate_1"
        android:inputType="numberDecimal|numberSigned" />

    <EditText
        android:id="@+id/x_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="270dp"
        android:ems="7"
        android:hint="@string/x_koordinate_2"
        android:inputType="numberDecimal|numberSigned" />

    <EditText
        android:id="@+id/y_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="320dp"
        android:ems="7"
        android:hint="@string/y_koordinate_2"
        android:inputType="numberDecimal|numberSigned" />


</RelativeLayout>